# genai-practice

./: .gitignore  README.md  pyproject.toml
example-0/: main.py
example-1/: main.py
example-2/: build.py  main.py
example-3/: books.json  build.py  constants.py  main.py
example-3/src/: books.py  constants.py  db.py  logger.py
example-4/: .env.example  README.md  books.json  build.py  constants.py  docker-compose.yml  manual.py  prompts.py
example-4/harry-potter-books/exports/: metadata.json
example-4/harry-potter-books/exports/hp1/: chunk-0.json  chunk-1.json  chunk-10.json  chunk-100.json  chunk-101.json  chunk-102.json  chunk-103.json  chunk-104.json  chunk-105.json  chunk-106.json  chunk-107.json  chunk-108.json  chunk-109.json  chunk-11.json  chunk-110.json  chunk-111.json  chunk-112.json  chunk-113.json  chunk-114.json  chunk-115.json  chunk-116.json  chunk-117.json  chunk-118.json  chunk-119.json  chunk-12.json  chunk-120.json  chunk-121.json  chunk-122.json  chunk-123.json  chunk-124.json  chunk-125.json  chunk-126.json  chunk-127.json  chunk-128.json  chunk-129.json  chunk-13.json  chunk-130.json  chunk-131.json  chunk-132.json  chunk-133.json  (+556 more)
example-4/harry-potter-books/exports/hp2/: chunk-0.json  chunk-1.json  chunk-10.json  chunk-100.json  chunk-101.json  chunk-102.json  (+674 more)
example-4/src/: graph.py  models.py  prompts.py  utils.py
example-5/: main.py
example-6/: .env.example  README.md  app.py  main.py
example-6/src/: agent.py  prompts.py  utils.py
example-7/: books.json  build.py  main.py
example-7/kv_store/: index_store.json
(+6778 files in other folders)
