[tool.poetry]
name = "genai-practice"
version = "0.1.0"
description = "GenAI Practice Repository"
authors = ["Shubham Chawla <shubham_chawla@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-ollama = "^0.2.2"
langchain-chroma = "^0.1.4"
pypdf = "^5.1.0"
langchain-community = "^0.3.14"
langgraph = "^0.2.61"
pydantic = "^2.10.5"
neo4j = "^5.28.1"
langchainhub = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
