[project]
name = "genai-practice"
version = "0.1.0"
description = "GenAI Practice Repository"
authors = [{ name = "Shubham Chawla", email = "shubham_chawla@live.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "langchain-chroma",
    "pypdf",
    "langchain-community",
    "langgraph",
    "pydantic",
    "neo4j",
    "langchainhub",
    "streamlit",
    "langchain-ollama",
]

[tool.hatch.build.targets.wheel]
packages = ["example-*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
